# LoopTuner_2

./: .env.example  .gitignore  README.md  chatgpt_feedback.txt  gemini_feedback.txt  project.txt  pyproject.toml
docs/: phase1_critique.md
src/looptuner/: __init__.py  cli.py  config.py  daemon.py  dashboard.py  drift.py  incremental.py  narrate.py  plots.py  recommend_report.py  scenario.py  settings_bias.py
src/looptuner/backtest/: __init__.py  engine.py  gallery.py  report.py
src/looptuner/eval/: __init__.py  baselines.py  metrics.py
src/looptuner/ingest/: __init__.py  nightscout.py  schema.py  store.py  synthetic.py
src/looptuner/model/: __init__.py  hybrid_node.py  inverse.py  kernels.py  twin.py  uncertainty.py
tests/: test_backtest.py  test_daemon.py  test_dashboard.py  test_drift.py  test_gallery_narrate.py  test_incremental.py  test_ingest.py  test_inverse.py  test_metrics.py  test_model.py  test_plots.py  test_scenario.py  test_settings_bias.py  test_store.py
