[project]
name = "looptuner"
version = "0.1.0"
description = "A patient-specific Neural-ODE glucose digital twin for Type 1 Diabetes decision support (suggestions only, never autonomous dosing)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Will Alger" }]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "torch>=2.4",
    "torchdiffeq>=0.2.4",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    "matplotlib>=3.8",
    "pyarrow>=15.0",
    "tzdata>=2026.2",
]

[project.optional-dependencies]
narrate = ["anthropic>=0.39"]
dev = ["pytest>=8.0", "ruff>=0.6"]
ui = [
    "streamlit>=1.40",
]

[project.scripts]
looptuner = "looptuner.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/looptuner"]

# Default to CPU torch wheels so the repo installs and tests anywhere (CI, laptops
# without CUDA). The GPU is an accelerator, not a requirement. On the RTX 5070 Ti
# (Blackwell / sm_120) box, override with the cu128 index — see README "GPU setup".
[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
